Six22 Rebrand Complete

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -2,7 +2,7 @@
 # CARAVAN PRODUCTION ENVIRONMENT
 # ============================================
 
-# Database (Railway PostgreSQL)
+# Database (Railway PostgreSQL or Supabase)
 DATABASE_URL="postgresql://postgres:password@localhost:5432/caravan?schema=public"
 
 # JWT Authentication
@@ -12,33 +12,51 @@ JWT_EXPIRES_IN="7d"
 # Server
 PORT=5180
 NODE_ENV=production
-CORS_ORIGIN="https://your-domain.com"
+CORS_ORIGIN="https://caravan.app"
 
-# Media Storage (Choose One)
-# Option A: AWS S3
-AWS_ACCESS_KEY_ID=""
-AWS_SECRET_ACCESS_KEY=""
-AWS_REGION="us-east-1"
-AWS_S3_BUCKET="caravan-media"
+# ============================================
+# MEDIA STORAGE (Choose One Provider)
+# ============================================
+STORAGE_PROVIDER="supabase"  # Options: supabase | s3 | r2
+STORAGE_BUCKET="caravan-media"
 
-# Option B: Cloudflare R2 (S3-compatible, recommended)
+# Option A: Supabase Storage (Recommended for simplicity)
+SUPABASE_URL="https://your-project.supabase.co"
+SUPABASE_SERVICE_KEY="your-service-role-key"
+
+# Option B: AWS S3
+# AWS_ACCESS_KEY_ID=""
+# AWS_SECRET_ACCESS_KEY=""
+# AWS_REGION="us-east-1"
+
+# Option C: Cloudflare R2 (S3-compatible, great value)
 # R2_ACCESS_KEY_ID=""
 # R2_SECRET_ACCESS_KEY=""
 # R2_ENDPOINT="https://YOUR_ACCOUNT_ID.r2.cloudflarestorage.com"
-# R2_BUCKET="caravan-media"
+# R2_PUBLIC_URL="https://media.caravan.app"
+
+# ============================================
+# EMAIL SERVICE (Resend)
+# ============================================
+RESEND_API_KEY="re_xxxxxxxxxxxxxxxxxxxxxx"
+FROM_EMAIL="Caravan <noreply@caravan.app>"
+
+# ============================================
+# OPTIONAL SERVICES
+# ============================================
 
 # Redis for caching & real-time (Upstash recommended)
-REDIS_URL="redis://localhost:6379"
+# REDIS_URL="redis://localhost:6379"
 
-# OAuth (Optional - add when ready)
-GOOGLE_CLIENT_ID=""
-GOOGLE_CLIENT_SECRET=""
-APPLE_CLIENT_ID=""
-APPLE_TEAM_ID=""
-APPLE_KEY_ID=""
+# OAuth Providers
+# GOOGLE_CLIENT_ID=""
+# GOOGLE_CLIENT_SECRET=""
+# APPLE_CLIENT_ID=""
+# APPLE_TEAM_ID=""
+# APPLE_KEY_ID=""
 
 # Push Notifications (for mobile)
-EXPO_ACCESS_TOKEN=""
+# EXPO_ACCESS_TOKEN=""
 
 # Rate limiting
 RATE_LIMIT_WINDOW_MS=60000
