--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -7,14 +7,18 @@
     "scripts": {
         "dev": "tsx watch src/index.ts",
         "start": "node dist/index.js",
-        "build": "tsc",
+        "build": "tsc && npx prisma generate",
+        "postinstall": "npx prisma generate",
         "lint": "eslint src --ext .ts",
         "db:migrate": "prisma migrate dev",
+        "db:migrate:deploy": "prisma migrate deploy",
         "db:generate": "prisma generate",
         "db:push": "prisma db push",
         "db:seed": "tsx src/db/seed.ts"
     },
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.980.0",
+        "@aws-sdk/s3-request-presigner": "^3.980.0",
         "@prisma/client": "^5.10.0",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
@@ -25,6 +29,7 @@
         "jsonwebtoken": "^9.0.2",
         "jszip": "^3.10.1",
         "multer": "^1.4.5-lts.1",
+        "resend": "^6.9.1",
         "socket.io": "^4.7.4",
         "uuid": "^9.0.1",
         "winston": "^3.12.0",
