fix: remove conflicting redirect rules from netlify.toml
The catch-all redirect to /index.html was conflicting with Next.js
server-side routing, causing 404 errors. The @netlify/plugin-nextjs
handles all routing automatically.

--- a/netlify.toml
+++ b/netlify.toml
@@ -23,9 +23,5 @@
     X-XSS-Protection = "1; mode=block"
     Referrer-Policy = "strict-origin-when-cross-origin"
 
-# Redirects for SPA routing (Next.js handles this, but as fallback)
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-  conditions = {Role = ["admin"]}
+# Note: Next.js routing is handled by the @netlify/plugin-nextjs plugin
+# No custom redirects needed - the plugin manages all server-side routing
