--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -24,6 +24,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.18.3",
         "express-rate-limit": "^7.2.0",
+        "google-auth-library": "^10.5.0",
         "helmet": "^7.1.0",
         "jsonwebtoken": "^9.0.2",
         "jszip": "^3.10.1",
