--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@caravan/mobile",
+    "name": "@six22/mobile",
     "version": "1.0.0",
     "private": true,
     "main": "expo-router/entry",
@@ -8,6 +8,9 @@
         "ios": "expo start --ios",
         "android": "expo start --android",
         "web": "expo start --web",
+        "build:ios": "eas build --platform ios --profile production",
+        "build:android": "eas build --platform android --profile production",
+        "submit:ios": "eas submit --platform ios",
         "lint": "eslint . --ext .ts,.tsx",
         "typecheck": "tsc --noEmit"
     },
