--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -1,73 +1,77 @@
 {
-    "expo": {
-        "name": "Six22",
-        "slug": "six22",
-        "version": "1.0.0",
-        "orientation": "portrait",
-        "icon": "./assets/icon.png",
-        "scheme": "six22",
-        "userInterfaceStyle": "dark",
-        "splash": {
-            "image": "./assets/splash.png",
-            "resizeMode": "contain",
-            "backgroundColor": "#0A0908"
-        },
-        "assetBundlePatterns": [
-            "**/*"
-        ],
-        "ios": {
-            "supportsTablet": true,
-            "bundleIdentifier": "app.six22.mobile",
-            "buildNumber": "1",
-            "infoPlist": {
-                "NSCameraUsageDescription": "Allow Six22 to access your camera to create posts and moments",
-                "NSPhotoLibraryUsageDescription": "Allow Six22 to access your photos to share with your community",
-                "NSMicrophoneUsageDescription": "Allow Six22 to access your microphone to record videos and voice messages"
-            }
-        },
-        "android": {
-            "adaptiveIcon": {
-                "foregroundImage": "./assets/adaptive-icon.png",
-                "backgroundColor": "#0A0908"
-            },
-            "package": "app.six22.mobile",
-            "versionCode": 1,
-            "permissions": [
-                "CAMERA",
-                "READ_EXTERNAL_STORAGE",
-                "WRITE_EXTERNAL_STORAGE",
-                "RECORD_AUDIO"
-            ]
-        },
-        "web": {
-            "bundler": "metro",
-            "output": "static",
-            "favicon": "./assets/favicon.png"
-        },
-        "plugins": [
-            "expo-router",
-            "expo-font",
-            [
-                "expo-camera",
-                {
-                    "cameraPermission": "Allow Six22 to access your camera to create amazing content."
-                }
-            ],
-            [
-                "expo-image-picker",
-                {
-                    "photosPermission": "Allow Six22 to access your photos to share with your community."
-                }
-            ]
-        ],
-        "experiments": {
-            "typedRoutes": true
-        },
-        "extra": {
-            "eas": {
-                "projectId": "your-project-id-here"
-            }
-        },
-        "owner": "six22app"
-    }
+  "expo": {
+    "name": "Six22",
+    "slug": "six22",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/icon.png",
+    "scheme": "six22",
+    "userInterfaceStyle": "dark",
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#0A0908"
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "ios": {
+      "supportsTablet": true,
+      "bundleIdentifier": "app.six22.mobile",
+      "buildNumber": "1",
+      "infoPlist": {
+        "NSCameraUsageDescription": "Allow Six22 to access your camera to create posts and moments",
+        "NSPhotoLibraryUsageDescription": "Allow Six22 to access your photos to share with your community",
+        "NSMicrophoneUsageDescription": "Allow Six22 to access your microphone to record videos and voice messages",
+        "ITSAppUsesNonExemptEncryption": false
+      }
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#0A0908"
+      },
+      "package": "app.six22.mobile",
+      "versionCode": 1,
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.RECORD_AUDIO"
+      ]
+    },
+    "web": {
+      "bundler": "metro",
+      "output": "static",
+      "favicon": "./assets/favicon.png"
+    },
+    "plugins": [
+      "expo-router",
+      "expo-font",
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow Six22 to access your camera to create amazing content."
+        }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "Allow Six22 to access your photos to share with your community."
+        }
+      ]
+    ],
+    "experiments": {
+      "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "fa614c84-9a07-4183-be66-e1ed9f8c73ba"
+      }
+    },
+    "owner": "ssweilem"
+  }
 }
