--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -1,38 +1,39 @@
 {
-    "cli": {
-        "version": ">= 7.0.0"
+  "cli": {
+    "version": ">= 7.0.0",
+    "appVersionSource": "remote"
+  },
+  "build": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
+      }
     },
-    "build": {
-        "development": {
-            "developmentClient": true,
-            "distribution": "internal",
-            "ios": {
-                "simulator": true
-            }
-        },
-        "preview": {
-            "distribution": "internal",
-            "ios": {
-                "resourceClass": "m-medium"
-            }
-        },
-        "production": {
-            "autoIncrement": true,
-            "ios": {
-                "resourceClass": "m-medium"
-            },
-            "android": {
-                "buildType": "apk"
-            }
-        }
+    "preview": {
+      "distribution": "internal",
+      "ios": {
+        "resourceClass": "m-medium"
+      }
     },
-    "submit": {
-        "production": {
-            "ios": {
-                "appleId": "sam.sweilem85@gmail.com",
-                "ascAppId": "YOUR_APP_STORE_CONNECT_APP_ID",
-                "appleTeamId": "YOUR_APPLE_TEAM_ID"
-            }
-        }
+    "production": {
+      "autoIncrement": true,
+      "ios": {
+        "resourceClass": "m-medium"
+      },
+      "android": {
+        "buildType": "apk"
+      }
     }
+  },
+  "submit": {
+    "production": {
+      "ios": {
+        "appleId": "sam.sweilem85@gmail.com",
+        "ascAppId": "YOUR_APP_STORE_CONNECT_APP_ID",
+        "appleTeamId": "YOUR_APPLE_TEAM_ID"
+      }
+    }
+  }
 }
