--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -18,6 +18,7 @@
         "@caravan/types": "*",
         "@caravan/ui": "*",
         "@expo/vector-icons": "^14.0.0",
+        "ajv": "^8.17.1",
         "expo": "~51.0.0",
         "expo-camera": "~15.0.0",
         "expo-constants": "~16.0.0",
