--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
         "clean": "rm -rf node_modules apps/*/node_modules packages/*/node_modules services/*/node_modules"
     },
     "devDependencies": {
-        "typescript": "^5.3.3",
+        "eslint": "^8.56.0",
         "prettier": "^3.2.0",
-        "eslint": "^8.56.0"
+        "typescript": "^5.3.3"
     },
     "engines": {
         "node": ">=18.0.0"
+    },
+    "dependencies": {
+        "ajv": "^8.17.1",
+        "ajv-keywords": "^5.1.0"
     }
 }
