feat: add production environment configuration templates

--- a/apps/server/.env.production
+++ b/apps/server/.env.production
@@ -1,31 +1,69 @@
-# ============================================
-# SIX22 PRODUCTION ENVIRONMENT
-# ============================================
+# Six22 Server Production Environment Configuration
+# =================================================
+# Set these in Railway Dashboard > Variables
 
-# Database (Supabase PostgreSQL - Using six22 schema)
-DATABASE_URL="postgres://postgres:Sprintloop2099$@db.bajozqhkgohnzjeimane.supabase.co:5432/postgres?schema=six22"
-DIRECT_URL="postgres://postgres:Sprintloop2099$@db.bajozqhkgohnzjeimane.supabase.co:5432/postgres?schema=six22"
+# ==============================================
+# REQUIRED - Must be set for production
+# ==============================================
 
-# JWT Authentication
-JWT_SECRET="six22-production-jwt-Km8xP2nQ9rL5vW3yA7cF"
-JWT_EXPIRES_IN="7d"
+# Database (Supabase PostgreSQL connection string)
+# Get from: Supabase Dashboard > Settings > Database > Connection string > URI
+DATABASE_URL="postgresql://postgres:YOUR_PASSWORD@db.YOUR_PROJECT_REF.supabase.co:5432/postgres"
 
-# Server
-PORT=5180
-NODE_ENV=production
-CORS_ORIGIN="https://six22.app,https://six22.netlify.app"
+# JWT Secret - IMPORTANT: Use a strong random string (32+ chars)
+# Generate with: openssl rand -base64 32
+JWT_SECRET="your-super-secure-random-jwt-secret-at-least-32-characters"
 
-# ============================================
-# SUPABASE STORAGE
-# ============================================
+# CORS Origins - Allow your Netlify frontend
+# Comma-separated for multiple domains
+CORS_ORIGIN="https://six22.app,https://www.six22.app,https://six22.netlify.app"
+
+# Environment
+NODE_ENV="production"
+
+# Server port (Railway handles this, but just in case)
+PORT="5180"
+
+# ==============================================
+# RATE LIMITING
+# ==============================================
+RATE_LIMIT_WINDOW_MS="60000"
+RATE_LIMIT_MAX_REQUESTS="100"
+
+# ==============================================
+# GOOGLE OAUTH
+# ==============================================
+# Get from: Google Cloud Console > APIs & Services > Credentials
+GOOGLE_CLIENT_ID="your-google-client-id.apps.googleusercontent.com"
+
+# ==============================================
+# STORAGE CONFIGURATION - Choose ONE provider
+# ==============================================
+
+# Option 1: Supabase Storage (Recommended - already have Supabase)
 STORAGE_PROVIDER="supabase"
 STORAGE_BUCKET="six22-media"
-SUPABASE_URL="https://bajozqhkgohnzjeimane.supabase.co"
-SUPABASE_ANON_KEY="sb_publishable_Due-2VNDA2zyj7MXLY9s2A_9hMzNvYZ"
-SUPABASE_SERVICE_KEY="sb_secret_CygKEY66wYwyfReFDHoG9g_bcda879f"
+SUPABASE_URL="https://YOUR_PROJECT_REF.supabase.co"
+SUPABASE_SERVICE_KEY="your-supabase-service-role-key"
 
-# ============================================
-# RATE LIMITING
-# ============================================
-RATE_LIMIT_WINDOW_MS=60000
-RATE_LIMIT_MAX_REQUESTS=100
+# Option 2: AWS S3 / Cloudflare R2
+# STORAGE_PROVIDER="s3"
+# AWS_REGION="us-east-1"
+# AWS_ACCESS_KEY_ID="your-access-key"
+# AWS_SECRET_ACCESS_KEY="your-secret-key"
+# STORAGE_BUCKET="six22-media"
+
+# Option 3: Local storage (NOT recommended for production)
+# STORAGE_PROVIDER="local"
+# SERVER_URL="https://six22-server-production.up.railway.app"
+
+# ==============================================
+# OPTIONAL SERVICES
+# ==============================================
+
+# Email service (for auth emails, notifications)
+# RESEND_API_KEY="re_xxxxxxxxx"
+
+# Push notifications
+# ONESIGNAL_APP_ID="your-onesignal-app-id"
+# ONESIGNAL_REST_API_KEY="your-onesignal-rest-api-key"
