--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,7 +13,7 @@
         "db:migrate:deploy": "prisma migrate deploy",
         "db:generate": "prisma generate",
         "db:push": "prisma db push",
-        "db:seed": "tsx src/db/seed.ts"
+        "db:seed": "tsx prisma/seed.ts"
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.980.0",
