--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,8 @@
 [build]
   # Build from the monorepo root to properly handle npm workspaces
   base = "."
-  command = "npm ci && npm run build --workspace=@caravan/web"
+  # Only install web workspace (skip mobile/server which have native deps)
+  command = "npm ci --workspace=apps/web && npm run build --workspace=@caravan/web"
   publish = "apps/web/.next"
 
 # Next.js on Netlify requires the Next.js plugin
