--- a/netlify.toml
+++ b/netlify.toml
@@ -2,11 +2,9 @@
 # Deploy via GitHub -> Netlify integration
 
 [build]
-  # Build from the monorepo root
   base = "."
-  # --ignore-scripts prevents react-native postinstall scripts (bob build) from running
-  # This is safe because we only build the web app which has no postinstall requirements
-  command = "npm ci --ignore-scripts && npm run build --workspace=@caravan/web"
+  # .npmrc at root sets ignore-scripts=true so Netlify's auto-install skips postinstall
+  command = "npm run build --workspace=@caravan/web"
   publish = "apps/web/.next"
 
 # Next.js on Netlify requires the Next.js plugin
