--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -24,11 +24,14 @@
         "dotenv": "^16.4.5",
         "express": "^4.18.3",
         "express-rate-limit": "^7.2.0",
+        "geoip-lite": "^1.4.10",
         "google-auth-library": "^10.5.0",
         "helmet": "^7.1.0",
         "jsonwebtoken": "^9.0.2",
         "jszip": "^3.10.1",
         "multer": "^1.4.5-lts.1",
+        "otpauth": "^9.4.1",
+        "otplib": "^13.2.1",
         "resend": "^6.9.1",
         "socket.io": "^4.7.4",
         "uuid": "^9.0.1",
@@ -39,6 +42,7 @@
         "@types/bcryptjs": "^2.4.6",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.25",
+        "@types/geoip-lite": "^1.4.4",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/multer": "^1.4.11",
         "@types/node": "^20.11.24",
