feat: Admin delete button visible on all posts
- Added isAdmin to useAuth destructuring in dashboard
- Delete button now shows for admins on all posts (not just owned)

--- a/apps/server/.env.production
+++ b/apps/server/.env.production
@@ -16,7 +16,7 @@ JWT_SECRET="your-super-secure-random-jwt-secret-at-least-32-characters"
 
 # CORS Origins - Allow your Netlify frontend
 # Comma-separated for multiple domains
-CORS_ORIGIN="https://six22.app,https://www.six22.app,https://six22.netlify.app"
+CORS_ORIGIN="https://0gravity.ai,https://www.0gravity.ai,https://zerog.social,https://www.zerog.social,https://six22.app,https://www.six22.app"
 
 # Environment
 NODE_ENV="production"
