--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -19,6 +19,7 @@
         "@aws-sdk/client-s3": "^3.980.0",
         "@aws-sdk/s3-request-presigner": "^3.980.0",
         "@prisma/client": "^5.10.0",
+        "@supabase/supabase-js": "^2.94.1",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
