fix: production auth config (google client id and api fallback)

--- a/apps/server/.env.production
+++ b/apps/server/.env.production
@@ -67,3 +67,6 @@ SUPABASE_SERVICE_KEY="your-supabase-service-role-key"
 # Push notifications
 # ONESIGNAL_APP_ID="your-onesignal-app-id"
 # ONESIGNAL_REST_API_KEY="your-onesignal-rest-api-key"
+
+# Google OAuth (Must match Frontend)
+GOOGLE_CLIENT_ID="375907036942-83ltii7u19dabirpak4j30anl7annrb7.apps.googleusercontent.com"
