--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -19,15 +19,18 @@
         "@aws-sdk/client-s3": "^3.980.0",
         "@aws-sdk/s3-request-presigner": "^3.980.0",
         "@prisma/client": "^5.10.0",
+        "@socket.io/redis-adapter": "^8.3.0",
         "@supabase/supabase-js": "^2.94.1",
         "bcryptjs": "^2.4.3",
+        "bullmq": "^5.67.2",
         "cors": "^2.8.5",
-        "dotenv": "^16.4.5",
+        "dotenv": "^16.4.7",
         "express": "^4.18.3",
         "express-rate-limit": "^7.2.0",
         "geoip-lite": "^1.4.10",
         "google-auth-library": "^10.5.0",
         "helmet": "^7.1.0",
+        "ioredis": "^5.9.2",
         "jsonwebtoken": "^9.0.2",
         "jszip": "^3.10.1",
         "multer": "^1.4.5-lts.1",
