--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,9 +10,11 @@
     },
     "dependencies": {
         "framer-motion": "^10.18.0",
+        "lucide-react": "^0.563.0",
         "next": "14.1.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-dropzone": "^14.4.0",
         "socket.io-client": "^4.8.3"
     },
     "devDependencies": {
