--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -19,6 +19,7 @@
         "@aws-sdk/client-s3": "^3.980.0",
         "@aws-sdk/s3-request-presigner": "^3.980.0",
         "@prisma/client": "^5.10.0",
+        "@sentry/node": "^10.38.0",
         "@socket.io/redis-adapter": "^8.3.0",
         "@supabase/supabase-js": "^2.94.1",
         "bcryptjs": "^2.4.3",
@@ -26,10 +27,11 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.18.3",
-        "express-rate-limit": "^7.2.0",
+        "express-rate-limit": "^7.5.1",
+        "express-validator": "^7.3.1",
         "geoip-lite": "^1.4.10",
         "google-auth-library": "^10.5.0",
-        "helmet": "^7.1.0",
+        "helmet": "^7.2.0",
         "ioredis": "^5.9.2",
         "jsonwebtoken": "^9.0.2",
         "jszip": "^3.10.1",
