--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -24,6 +24,7 @@
         "@supabase/supabase-js": "^2.94.1",
         "bcryptjs": "^2.4.3",
         "bullmq": "^5.67.2",
+        "cloudinary": "^2.9.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.18.3",
