--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,13 +9,15 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "clsx": "^2.1.1",
         "framer-motion": "^10.18.0",
         "lucide-react": "^0.563.0",
         "next": "14.1.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-dropzone": "^14.4.0",
-        "socket.io-client": "^4.8.3"
+        "socket.io-client": "^4.8.3",
+        "tailwind-merge": "^3.4.0"
     },
     "devDependencies": {
         "@types/node": "^20.11.0",
